<resources>

    <string name="app_name">GHand</string>

    <!-- Screen Login -->
    <string name="logar">Login</string>
    <string name="email">Username</string>
    <string name="senha">Password</string>
    <string name="registrar">Não possui conta?</string>
    <string name="recuperarSenha">Esqueceu a senha?</string>

    <!-- Error Messages -->
    <string name="username_error">Username Inválido</string>
    <string name="password_error">Password Inválida</string>
    <string name="generic_error">Algo deu errado</string>
    <string name="login_invalid">Login Inválido</string>
    <string name="blank_fields">Preencha os campos</string>
    <string name="name_error">Nome Inválido</string>
    <string name="invalid_creation">Usuario inválido</string>
    <string name="invalid_situation">Selecione um status</string>
    <string name="cnpj_error">Cnpj Inválido</string>
    <string name="razaoSocial_error">Razão Social Inválida</string>
    <string name="nameProduct_error">Nome do produto inválido</string>
    <string name="amount_error">Quantidade de produtos inválidas</string>
    <string name="date_error">Data Inválida</string>

    <!-- Screen registerFornecedor -->
    <string name="name">Nome</string>
    <string name="cnpj">Cnpj</string>
    <string name="razaoSocial">Razão Social</string>
    <string name="status">Status</string>

    <!-- Home Screen  -->
    <string name="btn_fornecedor">Fornecedor </string>
    <string name="btn_agenda">Agenda</string>
    <string name="btn_accout">Conta</string>

    <!-- Screen MarkAgendaProduto -->
    <string name="nameProduct">Nome do produto</string>
    <string name="amount">Quantidade do produto</string>
    <string name="dateTime">Selecione a data</string>

    <!-- Screen MarkAgendaPagamento -->
    <string name="valueToPay">Valor a pagar</string>
    <string name="errorValue">Valor inválido</string>
    <string name="badCration">Criação inválida</string>
    
    <string-array name="situation">
        <item>Status</item>
        <item>Inactive</item>
        <item>Active</item>
    </string-array>

    <string-array name="status_agendaProd">
        <item>Status</item>
        <item>Recebido</item>
        <item>Não Recebido</item>
    </string-array>

    <string-array name="status_AgendaPag">
        <item>Status</item>
        <item>Pago</item>
        <item>Não pago</item>
    </string-array>


    <string-array name="month">
        <item>Selecione a opção</item>
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <!-- Screen registerUser -->
    <string name="register">Registrar</string>
    <string name="goLogin">Já possui conta?</string>


    <string name="listar_fornecedores">Listar Fornecedores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digite_cnpj">Digite o Cnpj</string>
    <string name="digite_razaoSocial">Digite a Razão Social</string>
    <string name="submit">Submit</string>
    <string name="agenda">Agenda</string>
    <string name="fornecedor">fornecedor</string>
    <string name="gett_AllFornecedores">Listar todos</string>
    <string name="selecione_o_m_s">Selecione o mês</string>
    <string name="visualizar_perfil">Visualizar Perfil</string>
    <string name="contactNumber">Número de contato</string>
    <string name="eletronicAddres">Email</string>
    <string name="confirme_a_senha_nova">Confirme a senha nova</string>
</resources>