<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".agenda.agendaPagamento.view.AgendaPagamentoActivity"
        android:background="@color/Weak_green">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_vlueToPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/ti_cnpj">

            <EditText
                android:id="@+id/valueToPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valueToPay"
                android:textSize="25sp"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_cnpj">

            <Button
                android:id="@+id/dateAgendaPag"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Selecione a data"
                android:textSize="20sp"
                />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_cnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_vlueToPay"
            app:layout_constraintBottom_toBottomOf="parent">
            <EditText
                android:id="@+id/cnpj_digite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_cnpj"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginHorizontal="40dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerAgendaPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/register"
            android:textSize="20sp"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/icon_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/home_icon_vector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            />



        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>