<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".agenda.view.AgendaActivity"
        android:background="@color/Wheat">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_razaoSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/ti_nameProdcut">

            <EditText
                android:id="@+id/razaoSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/razaoSocial"
                android:textSize="25sp"
                android:layout_marginHorizontal="40dp"
                android:gravity="center"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_nameProdcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="18dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_razaoSocial"
            app:layout_constraintBottom_toTopOf="@+id/ti_amount"
            app:layout_constraintVertical_chainStyle="packed"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameProduct"
                android:hint="@string/nameProduct"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/tv_cornes"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_nameProdcut"
            app:layout_constraintBottom_toBottomOf="parent">
            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginHorizontal="40dp"
                android:background="@drawable/tv_cornes"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/ti_amount">

            <DatePicker
                android:id="@+id/dateTimePicker"
                android:layout_width="220dp"
                android:layout_height="90dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_marginHorizontal="90dp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/agendarData"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"

            />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>